@@ -2,6 +2,18 @@
 # arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missingh--head--0.7
 #
 
+2004-12-23 17:59:37 GMT	John Goerzen <jgoerzen@complete.org>	patch-159
+
+    Summary:
+      Checkpointing lsl work
+    Revision:
+      missingh--head--0.7--patch-159
+
+
+    modified files:
+     ChangeLog libsrc/MissingH/IO/HVFS/Utils.hs
+
+
 2004-12-23 17:48:25 GMT	John Goerzen <jgoerzen@complete.org>	patch-158
 
     Summary:
